--- a/si_list/si_templates/si.html
+++ b/si_list/si_templates/si.html
@@ -248,38 +248,36 @@
 <body>
 
        <div class="centered">
-    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li/'">LI　手陽明大腸経（てのようめいだいちょうけい）</button>
+    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si/'">SI　手太陽小腸経（てのたいようしょうちょうけい）</button>
 
     <br><br>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_01/'">LI01  商陽（しょうよう）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_02/'">LI02  二間（じかん）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_03/'">LI03  三間（さんかん）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_04/'">LI04  合谷（ごうこく）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_05/'">LI05  陽谿（ようけい）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si01/'">SI01  少沢（しょうたく）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si02/'">SI02  前谷（ぜんこく）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si03/'">SI03  後谿（ごけい）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si04/'">SI04  腕骨（わんこつ）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si05/'">SI05  陽谷（ようこく）</button>
 
     <br><br>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_06/'">LI06  偏歴（へんれき）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_07/'">LI07  温溜（おんりゅう）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_08/'">LI08  下廉（げれん）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_09/'">LI09  上廉（じょうれん）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_10/'">LI10  手三里（てのさんり）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si06/'">SI06  養老（ようろう）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si07/'">SI07  支正（しせい）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si08/'">SI08  小海（しょうかい）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si09/'">SI09  肩貞（けんてい）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si10/'">SI10  臑兪（じゅゆ）</button>
 
     <br><br>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_11/'">LI11  曲池（きょくち）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_12/'">LI12  肘髎（ちゅうりょう）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_13/'">LI13  手五里（てのごり）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_14/'">LI14  臂臑（ひじゅ）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_15/'">LI15  肩髃（けんぐう）</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si11/'">SI11  天宗（てんそう）</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si12/'">SI12  秉風（へいふう）</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si13/'">SI13  曲垣（きょくえん）</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si14/'">SI14  肩外兪（けんがいゆ）</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si15/'">SI15  肩中兪（けんちゅうゆ）</button>
 
     <br><br>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_16/'">LI16  巨骨（ここつ）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_17/'">LI17  天鼎（てんてい）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_18/'">LI18  扶突（ふとつ）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_19/'">LI19  禾髎（かりょう）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_20/'">LI20  迎香（げいこう）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si16/'">SI16  天窓（てんそう）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si17/'">SI17  天容（てんよう）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si18/'">SI18  顴髎（けんりょう）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si19/'">SI19  聴宮（ちょうきゅう）</button>
 
-
-</div>
+       </div>
 
 </body>
 </html>
