--- a/pc_list/pc_templates/pc.html
+++ b/pc_list/pc_templates/pc.html
@@ -248,35 +248,22 @@
 <body>
 
        <div class="centered">
-    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li/'">LI　手陽明大腸経（てのようめいだいちょうけい）</button>
+    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc/'">PC　手厥陰心包経（てのけついんしんぽうけい）</button>
 
     <br><br>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_01/'">LI01  商陽（しょうよう）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_02/'">LI02  二間（じかん）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_03/'">LI03  三間（さんかん）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_04/'">LI04  合谷（ごうこく）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_05/'">LI05  陽谿（ようけい）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_01/'">PC01  天池（てんち）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_02/'">PC02  天泉（てんせん）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_03/'">PC03  曲沢（きょくたく）</button>
+    <br><br>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_04/'">PC04  郄門（げきもん）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_05/'">PC05  間使（かんし）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_06/'">PC06  内関（ないかん）</button>
+     <br><br>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_07/'">PC07  大陵（だいりょう）</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_08/'">PC08  労宮（ろうきゅう）</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc_09/'">PC09  中衝（ちゅうしょう）</button>
 
     <br><br>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_06/'">LI06  偏歴（へんれき）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_07/'">LI07  温溜（おんりゅう）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_08/'">LI08  下廉（げれん）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_09/'">LI09  上廉（じょうれん）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_10/'">LI10  手三里（てのさんり）</button>
-
-    <br><br>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_11/'">LI11  曲池（きょくち）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_12/'">LI12  肘髎（ちゅうりょう）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_13/'">LI13  手五里（てのごり）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_14/'">LI14  臂臑（ひじゅ）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_15/'">LI15  肩髃（けんぐう）</button>
-
-    <br><br>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_16/'">LI16  巨骨（ここつ）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_17/'">LI17  天鼎（てんてい）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_18/'">LI18  扶突（ふとつ）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_19/'">LI19  禾髎（かりょう）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_20/'">LI20  迎香（げいこう）</button>
 
 
 </div>
