--- a/bl_list/bl_templates/bl_31.html
+++ b/bl_list/bl_templates/bl_31.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+               <!DOCTYPE html>
 <html lang="en">
 <head>
     <style>
@@ -250,8 +250,8 @@
 <body style="text-align: center">
 
        <div class="centered">
-    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/display/肩'">肩</button>
-    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/display/髃'">髃</button>
+    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/display/上'">上</button>
+    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/display/髎'">髎</button>
 
     <br><br>
 
